Clipper/Clipper/force-app/main/default/objects/Order/fields/Generate_Draft_Order_Days_Prior__c.field-meta.xml
<CustomField>
    <fullName>Generate_Draft_Order_Days_Prior__c</fullName>
    <label>Generate Draft Order Days Prior</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>