Clipper/Clipper/force-app/main/default/objects/Order/fields/Next_Recurring_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Recurring_Order_Date__c</fullName>
    <label>Next Recurring Order Date</label>
    <type>Date</type>
</CustomField>