Clipper/Clipper/force-app/main/default/objects/Order/fields/Recurrence_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Recurrence_End_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Recurrence End Date</label>
    <type>Date</type>
</CustomField>