Clipper/Clipper/force-app/main/default/objects/Order/fields/Recurrence_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Recurrence_Start_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Recurrence Start Date</label>
    <type>Date</type>
</CustomField>