Clipper/Clipper/force-app/main/default/objects/Order/fields/Recurrence_Weekdays__c.field-meta.xml
<CustomField>
    <fullName>Recurrence_Weekdays__c</fullName>
    <label>Recurrence Weekdays</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Recurrence_Frequency__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sunday</fullName>
            </value>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
            <value>
                <fullName>Saturday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>