Clipper/Clipper/force-app/main/default/objects/Order/fields/Recurrence_When__c.field-meta.xml
<CustomField>
    <fullName>Recurrence_When__c</fullName>
    <label>Recurrence When</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Recurrence_Frequency__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Specific Days</fullName>
            </value>
            <value>
                <fullName>Relative Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>