Clipper/Clipper/force-app/main/default/objects/Order/fields/Relative_Day__c.field-meta.xml
<CustomField>
    <fullName>Relative_Day__c</fullName>
    <label>Relative Day</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Recurrence_When__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First</fullName>
            </value>
            <value>
                <fullName>Second</fullName>
            </value>
            <value>
                <fullName>Third</fullName>
            </value>
            <value>
                <fullName>Fourth</fullName>
            </value>
            <value>
                <fullName>Last</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>