Clipper/Clipper/force-app/main/default/objects/Order/fields/Relative_Day_Repeat_on__c.field-meta.xml
<CustomField>
    <fullName>Relative_Day_Repeat_on__c</fullName>
    <label>Relative Day Repeat on</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Recurrence_When__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sunday</fullName>
            </value>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
            <value>
                <fullName>Saturday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>