Clipper/Clipper/force-app/main/default/objects/Order/fields/Replace_scheduled_order__c.field-meta.xml
<CustomField>
    <fullName>Replace_scheduled_order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Replace scheduled order</label>
    <type>Checkbox</type>
</CustomField>