Clipper/Clipper/force-app/main/default/objects/Order/fields/Snooze_Order__c.field-meta.xml
<CustomField>
    <fullName>Snooze_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Snooze Order</label>
    <type>Checkbox</type>
</CustomField>