Clipper/Clipper/force-app/main/default/objects/Order/fields/Snooze_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Snooze_Start_Date__c</fullName>
    <label>Snooze Start Date</label>
    <type>Date</type>
</CustomField>